--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^16.0.3",
     "eslint": "^8.25.0",
     "firebase": "^9.12.1",
     "react": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
+    "stripe": "^10.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
