--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
+    "prettier": "2.8.4",
     "prettier-plugin-tailwindcss": "^0.1.13",
     "tailwindcss": "^3.2.1"
   }
